public class Position
{
    /*public boolean IsThereACheck(byte[,] field)
    {

    }*/
    /*private boolean IsThereACheckmate(byte[,] field)
    {

    }*/
    /*private boolean IsThereAStalemate(byte[,] field)
    {

    }*/
    /*private boolean IsThereAThreefoldRepetition(byte[,] field)
    {

    }*/
    /*private boolean IsThereAnInsufficientMaterial(byte[,] field)
    {

    }*/
    /*public byte IsGameEnded(byte[,] field)
    {

    }*/
}